@@ -13,35 +13,37 @@
  */
 package io.trino.plugin.hive.optimizer;
 
-import com.google.common.collect.ImmutableSet;
-import com.google.common.io.Files;
-import io.trino.FeaturesConfig.JoinDistributionType;
-import io.trino.FeaturesConfig.JoinReorderingStrategy;
+import com.google.common.collect.ImmutableList;
+import io.airlift.slice.Slices;
 import io.trino.Session;
-import io.trino.plugin.hive.HdfsConfig;
-import io.trino.plugin.hive.HdfsConfiguration;
-import io.trino.plugin.hive.HdfsConfigurationInitializer;
-import io.trino.plugin.hive.HdfsEnvironment;
-import io.trino.plugin.hive.HiveHdfsConfiguration;
-import io.trino.plugin.hive.NodeVersion;
+import io.trino.metadata.ResolvedFunction;
+import io.trino.metadata.TestingFunctionResolution;
+import io.trino.metastore.Database;
+import io.trino.metastore.HiveMetastore;
+import io.trino.metastore.HiveMetastoreFactory;
 import io.trino.plugin.hive.TestingHiveConnectorFactory;
-import io.trino.plugin.hive.authentication.HiveIdentity;
-import io.trino.plugin.hive.authentication.NoHdfsAuthentication;
-import io.trino.plugin.hive.metastore.Database;
-import io.trino.plugin.hive.metastore.HiveMetastore;
-import io.trino.plugin.hive.metastore.MetastoreConfig;
-import io.trino.plugin.hive.metastore.file.FileHiveMetastore;
-import io.trino.plugin.hive.metastore.file.FileHiveMetastoreConfig;
+import io.trino.spi.function.OperatorType;
 import io.trino.spi.security.PrincipalType;
+import io.trino.sql.ir.Between;
+import io.trino.sql.ir.Call;
+import io.trino.sql.ir.Comparison;
+import io.trino.sql.ir.Constant;
+import io.trino.sql.ir.In;
+import io.trino.sql.ir.Logical;
+import io.trino.sql.ir.Reference;
+import io.trino.sql.planner.OptimizerConfig.JoinDistributionType;
+import io.trino.sql.planner.OptimizerConfig.JoinReorderingStrategy;
 import io.trino.sql.planner.assertions.BasePlanTest;
-import io.trino.testing.LocalQueryRunner;
-import io.trino.testing.QueryRunner;
-import org.testng.annotations.AfterClass;
-import org.testng.annotations.BeforeClass;
-import org.testng.annotations.Test;
+import io.trino.testing.PlanTester;
+import io.trino.type.LikePattern;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
 import java.io.File;
-import java.util.List;
+import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.nio.file.Files;
 import java.util.Map;
 import java.util.Optional;
 
@@ -49,19 +51,28 @@ import static com.google.common.io.MoreFiles.deleteRecursively;
 import static com.google.common.io.RecursiveDeleteOption.ALLOW_INSECURE;
 import static io.trino.SystemSessionProperties.JOIN_DISTRIBUTION_TYPE;
 import static io.trino.SystemSessionProperties.JOIN_REORDERING_STRATEGY;
-import static io.trino.sql.planner.assertions.PlanMatchPattern.equiJoinClause;
+import static io.trino.plugin.hive.TestingHiveUtils.getConnectorService;
+import static io.trino.spi.type.BigintType.BIGINT;
+import static io.trino.spi.type.IntegerType.INTEGER;
+import static io.trino.spi.type.VarcharType.createVarcharType;
+import static io.trino.sql.analyzer.TypeSignatureProvider.fromTypes;
+import static io.trino.sql.ir.Booleans.TRUE;
+import static io.trino.sql.ir.Comparison.Operator.EQUAL;
+import static io.trino.sql.ir.Comparison.Operator.NOT_EQUAL;
+import static io.trino.sql.ir.Logical.Operator.AND;
+import static io.trino.sql.planner.assertions.PlanMatchPattern.any;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.exchange;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.filter;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.join;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.output;
-import static io.trino.sql.planner.assertions.PlanMatchPattern.project;
 import static io.trino.sql.planner.assertions.PlanMatchPattern.tableScan;
 import static io.trino.sql.planner.plan.ExchangeNode.Scope.LOCAL;
 import static io.trino.sql.planner.plan.ExchangeNode.Scope.REMOTE;
-import static io.trino.sql.planner.plan.ExchangeNode.Type.GATHER;
 import static io.trino.sql.planner.plan.ExchangeNode.Type.REPARTITION;
-import static io.trino.sql.planner.plan.JoinNode.Type.INNER;
+import static io.trino.sql.planner.plan.ExchangeNode.Type.REPLICATE;
+import static io.trino.sql.planner.plan.JoinType.INNER;
 import static io.trino.testing.TestingSession.testSessionBuilder;
+import static io.trino.type.LikePatternType.LIKE_PATTERN;
 
 public class TestHivePlans
         extends BasePlanTest
@@ -74,60 +85,60 @@ public class TestHivePlans
             .setSchema(SCHEMA_NAME)
             .build();
 
+    private static final TestingFunctionResolution FUNCTIONS = new TestingFunctionResolution();
+    private static final ResolvedFunction LIKE = FUNCTIONS.resolveFunction("$like", fromTypes(createVarcharType(5), LIKE_PATTERN));
+    private static final ResolvedFunction SUBSTRING = FUNCTIONS.resolveFunction("substring", fromTypes(createVarcharType(5), BIGINT));
+    private static final ResolvedFunction MODULUS_INTEGER = FUNCTIONS.resolveOperator(OperatorType.MODULUS, ImmutableList.of(INTEGER, INTEGER));
+
     private File baseDir;
 
     @Override
-    protected LocalQueryRunner createLocalQueryRunner()
+    protected PlanTester createPlanTester()
     {
-        baseDir = Files.createTempDir();
-        HdfsConfig config = new HdfsConfig();
-        HdfsConfiguration configuration = new HiveHdfsConfiguration(new HdfsConfigurationInitializer(config), ImmutableSet.of());
-        HdfsEnvironment environment = new HdfsEnvironment(configuration, config, new NoHdfsAuthentication());
+        try {
+            baseDir = Files.createTempDirectory(null).toFile();
+        }
+        catch (IOException e) {
+            throw new UncheckedIOException(e);
+        }
 
-        HiveMetastore metastore = new FileHiveMetastore(
-                new NodeVersion("test_version"),
-                environment,
-                new MetastoreConfig(),
-                new FileHiveMetastoreConfig()
-                        .setCatalogDirectory(baseDir.toURI().toString())
-                        .setMetastoreUser("test"));
-        Database database = Database.builder()
+        PlanTester planTester = PlanTester.create(HIVE_SESSION);
+        planTester.createCatalog(HIVE_CATALOG_NAME, new TestingHiveConnectorFactory(baseDir.toPath()), Map.of("hive.max-partitions-for-eager-load", "5"));
+
+        HiveMetastore metastore = getConnectorService(planTester, HiveMetastoreFactory.class)
+                .createMetastore(Optional.empty());
+
+        metastore.createDatabase(Database.builder()
                 .setDatabaseName(SCHEMA_NAME)
                 .setOwnerName(Optional.of("public"))
                 .setOwnerType(Optional.of(PrincipalType.ROLE))
-                .build();
+                .build());
 
-        metastore.createDatabase(new HiveIdentity(HIVE_SESSION.toConnectorSession()), database);
-
-        return createQueryRunner(HIVE_SESSION, metastore);
+        return planTester;
     }
 
-    protected LocalQueryRunner createQueryRunner(Session session, HiveMetastore metastore)
-    {
-        LocalQueryRunner queryRunner = LocalQueryRunner.create(session);
-        queryRunner.createCatalog(HIVE_CATALOG_NAME, new TestingHiveConnectorFactory(metastore), Map.of());
-        return queryRunner;
-    }
-
-    @BeforeClass
+    @BeforeAll
     public void setUp()
     {
-        QueryRunner queryRunner = getQueryRunner();
+        PlanTester planTester = getPlanTester();
 
         // Use common VALUES for setup so that types are the same and there are no coercions.
         String values = "VALUES ('one', 1), ('two', 2), ('three', 3), ('four', 4), ('five', 5)";
 
         // partitioned on integer
-        queryRunner.execute("CREATE TABLE table_int_partitioned WITH (partitioned_by = ARRAY['int_part']) AS SELECT str_col, int_part FROM (" + values + ") t(str_col, int_part)");
+        planTester.executeStatement("CREATE TABLE table_int_partitioned WITH (partitioned_by = ARRAY['int_part']) AS SELECT str_col, int_part FROM (" + values + ") t(str_col, int_part)");
 
         // partitioned on varchar
-        queryRunner.execute("CREATE TABLE table_str_partitioned WITH (partitioned_by = ARRAY['str_part']) AS SELECT int_col, str_part FROM (" + values + ") t(str_part, int_col)");
+        planTester.executeStatement("CREATE TABLE table_str_partitioned WITH (partitioned_by = ARRAY['str_part']) AS SELECT int_col, str_part FROM (" + values + ") t(str_part, int_col)");
+
+        // with too many partitions
+        planTester.executeStatement("CREATE TABLE table_int_with_too_many_partitions WITH (partitioned_by = ARRAY['int_part']) AS SELECT str_col, int_part FROM (" + values + ", ('six', 6)) t(str_col, int_part)");
 
         // unpartitioned
-        queryRunner.execute("CREATE TABLE table_unpartitioned AS SELECT str_col, int_col FROM (" + values + ") t(str_col, int_col)");
+        planTester.executeStatement("CREATE TABLE table_unpartitioned AS SELECT str_col, int_col FROM (" + values + ") t(str_col, int_col)");
     }
 
-    @AfterClass(alwaysRun = true)
+    @AfterAll
     public void cleanup()
             throws Exception
     {
@@ -142,9 +153,11 @@ public class TestHivePlans
         assertDistributedPlan(
                 "SELECT * FROM table_str_partitioned WHERE str_part LIKE 't%'",
                 output(
-                        exchange(REMOTE, GATHER,
-                                filter("\"like\"(STR_PART, \"$like_pattern\"('t%'))",
-                                        tableScan("table_str_partitioned", Map.of("INT_COL", "int_col", "STR_PART", "str_part"))))));
+                        filter(
+                                new Call(
+                                        FUNCTIONS.resolveFunction("$like", fromTypes(createVarcharType(55), LIKE_PATTERN)),
+                                        ImmutableList.of(new Reference(createVarcharType(55), "STR_PART"), new Constant(LIKE_PATTERN, LikePattern.compile("t%", Optional.empty())))),
+                                tableScan("table_str_partitioned", Map.of("INT_COL", "int_col", "STR_PART", "str_part")))));
     }
 
     @Test
@@ -160,17 +173,18 @@ public class TestHivePlans
                         "WHERE l.str_part LIKE 't%'",
                 noJoinReordering(),
                 output(
-                        exchange(REMOTE, GATHER,
-                                join(INNER, List.of(equiJoinClause("L_STR_PART", "R_STR_COL")),
+                        join(INNER, builder -> builder
+                                .equiCriteria("L_STR_PART", "R_STR_COL")
+                                .left(
                                         exchange(REMOTE, REPARTITION,
-                                                project(
-                                                        filter("\"like\"(L_STR_PART, \"$like_pattern\"('t%'))",
-                                                                tableScan("table_str_partitioned", Map.of("L_INT_COL", "int_col", "L_STR_PART", "str_part"))))),
-                                        exchange(LOCAL,
-                                                exchange(REMOTE, REPARTITION,
-                                                        project(
-                                                                filter("R_STR_COL IN ('three', CAST('two' AS varchar(5))) AND \"like\"(R_STR_COL, \"$like_pattern\"('t%'))",
-                                                                        tableScan("table_unpartitioned", Map.of("R_STR_COL", "str_col", "R_INT_COL", "int_col"))))))))));
+                                                filter(
+                                                        new Call(LIKE, ImmutableList.of(new Reference(createVarcharType(5), "L_STR_PART"), new Constant(LIKE_PATTERN, LikePattern.compile("t%", Optional.empty())))),
+                                                        tableScan("table_str_partitioned", Map.of("L_INT_COL", "int_col", "L_STR_PART", "str_part")))))
+                                .right(exchange(LOCAL,
+                                        exchange(REMOTE, REPARTITION,
+                                                filter(
+                                                        new Logical(AND, ImmutableList.of(new In(new Reference(createVarcharType(5), "R_STR_COL"), ImmutableList.of(new Constant(createVarcharType(5), Slices.utf8Slice("three")), new Constant(createVarcharType(5), Slices.utf8Slice("two")))), new Call(LIKE, ImmutableList.of(new Reference(createVarcharType(5), "R_STR_COL"), new Constant(LIKE_PATTERN, LikePattern.compile("t%", Optional.empty())))))),
+                                                        tableScan("table_unpartitioned", Map.of("R_STR_COL", "str_col", "R_INT_COL", "int_col")))))))));
     }
 
     @Test
@@ -183,23 +197,25 @@ public class TestHivePlans
                         "WHERE l.int_part BETWEEN 2 AND 4",
                 noJoinReordering(),
                 output(
-                        exchange(REMOTE, GATHER,
-                                join(INNER, List.of(equiJoinClause("L_INT_PART", "R_INT_COL")),
+                        join(INNER, builder -> builder
+                                .equiCriteria("L_INT_PART", "R_INT_COL")
+                                .left(
                                         exchange(REMOTE, REPARTITION,
-                                                project(
-                                                        filter("true", // dynamic filter
-                                                                tableScan("table_int_partitioned", Map.of("L_INT_PART", "int_part", "L_STR_COL", "str_col"))))),
+                                                filter(
+                                                        TRUE,
+                                                        tableScan("table_int_partitioned", Map.of("L_INT_PART", "int_part", "L_STR_COL", "str_col")))))
+                                .right(
                                         exchange(LOCAL,
                                                 exchange(REMOTE, REPARTITION,
-                                                        project(
-                                                                filter("R_INT_COL IN (2, 3, 4)",
-                                                                        tableScan("table_unpartitioned", Map.of("R_STR_COL", "str_col", "R_INT_COL", "int_col"))))))))));
+                                                        filter(
+                                                                new Between(new Reference(INTEGER, "R_INT_COL"), new Constant(INTEGER, 2L), new Constant(INTEGER, 4L)),
+                                                                tableScan("table_unpartitioned", Map.of("R_STR_COL", "str_col", "R_INT_COL", "int_col")))))))));
     }
 
     @Test
     public void testSubsumePartitionPartOfAFilter()
     {
-        // Test that the partition filter is fully subsumed (TODO it's not) into the partitioned table, while also being propagated into the other Join side, in the presence
+        // Test that the partition filter is fully subsumed into the partitioned table, while also being propagated into the other Join side, in the presence
         // of other pushdown-able filter.
         // Join is important because it triggers PredicatePushDown logic (EffectivePredicateExtractor)
         assertDistributedPlan(
@@ -207,17 +223,19 @@ public class TestHivePlans
                         "WHERE l.int_part BETWEEN 2 AND 4 AND l.str_col != 'three'",
                 noJoinReordering(),
                 output(
-                        exchange(REMOTE, GATHER,
-                                join(INNER, List.of(equiJoinClause("L_INT_PART", "R_INT_COL")),
+                        join(INNER, builder -> builder
+                                .equiCriteria("L_INT_PART", "R_INT_COL")
+                                .left(
                                         exchange(REMOTE, REPARTITION,
-                                                project(
-                                                        filter("L_STR_COL != 'three' AND L_INT_PART IN (2, 3, 4)", // TODO the L_INT_PART filter is redundant
-                                                                tableScan("table_int_partitioned", Map.of("L_INT_PART", "int_part", "L_STR_COL", "str_col"))))),
+                                                filter(
+                                                        new Comparison(NOT_EQUAL, new Reference(createVarcharType(5), "L_STR_COL"), new Constant(createVarcharType(5), Slices.utf8Slice("three"))),
+                                                        tableScan("table_int_partitioned", Map.of("L_INT_PART", "int_part", "L_STR_COL", "str_col")))))
+                                .right(
                                         exchange(LOCAL,
                                                 exchange(REMOTE, REPARTITION,
-                                                        project(
-                                                                filter("R_INT_COL IN (2, 3, 4)",
-                                                                        tableScan("table_unpartitioned", Map.of("R_STR_COL", "str_col", "R_INT_COL", "int_col"))))))))));
+                                                        filter(
+                                                                new Between(new Reference(INTEGER, "R_INT_COL"), new Constant(INTEGER, 2L), new Constant(INTEGER, 4L)),
+                                                                tableScan("table_unpartitioned", Map.of("R_STR_COL", "str_col", "R_INT_COL", "int_col")))))))));
     }
 
     @Test
@@ -231,17 +249,19 @@ public class TestHivePlans
                         "WHERE l.int_part BETWEEN 2 AND 4 AND substring(l.str_col, 2) != 'hree'",
                 noJoinReordering(),
                 output(
-                        exchange(REMOTE, GATHER,
-                                join(INNER, List.of(equiJoinClause("L_INT_PART", "R_INT_COL")),
+                        join(INNER, builder -> builder
+                                .equiCriteria("L_INT_PART", "R_INT_COL")
+                                .left(
                                         exchange(REMOTE, REPARTITION,
-                                                project(
-                                                        filter("substring(L_STR_COL, BIGINT '2') != CAST('hree' AS varchar(5))",
-                                                                tableScan("table_int_partitioned", Map.of("L_INT_PART", "int_part", "L_STR_COL", "str_col"))))),
+                                                filter(
+                                                        new Comparison(NOT_EQUAL, new Call(SUBSTRING, ImmutableList.of(new Reference(createVarcharType(5), "L_STR_COL"), new Constant(BIGINT, 2L))), new Constant(createVarcharType(5), Slices.utf8Slice("hree"))),
+                                                        tableScan("table_int_partitioned", Map.of("L_INT_PART", "int_part", "L_STR_COL", "str_col")))))
+                                .right(
                                         exchange(LOCAL,
                                                 exchange(REMOTE, REPARTITION,
-                                                        project(
-                                                                filter("R_INT_COL IN (2, 3, 4)",
-                                                                        tableScan("table_unpartitioned", Map.of("R_STR_COL", "str_col", "R_INT_COL", "int_col"))))))))));
+                                                        filter(
+                                                                new Between(new Reference(INTEGER, "R_INT_COL"), new Constant(INTEGER, 2L), new Constant(INTEGER, 4L)),
+                                                                tableScan("table_unpartitioned", Map.of("R_STR_COL", "str_col", "R_INT_COL", "int_col")))))))));
     }
 
     @Test
@@ -255,23 +275,67 @@ public class TestHivePlans
                         "WHERE l.int_part BETWEEN 2 AND 4 AND l.int_part % 2 = 0",
                 noJoinReordering(),
                 output(
-                        exchange(REMOTE, GATHER,
-                                join(INNER, List.of(equiJoinClause("L_INT_PART", "R_INT_COL")),
+                        join(INNER, builder -> builder
+                                .equiCriteria("L_INT_PART", "R_INT_COL")
+                                .filter(new Comparison(EQUAL, new Call(MODULUS_INTEGER, ImmutableList.of(new Reference(INTEGER, "R_INT_COL"), new Constant(INTEGER, 2L))), new Constant(INTEGER, 0L)))
+                                .left(
                                         exchange(REMOTE, REPARTITION,
-                                                project(
-                                                        filter("L_INT_PART % 2 = 0",
-                                                                tableScan("table_int_partitioned", Map.of("L_INT_PART", "int_part", "L_STR_COL", "str_col"))))),
+                                                any(
+                                                        tableScan("table_int_partitioned", Map.of("L_INT_PART", "int_part", "L_STR_COL", "str_col")))))
+                                .right(
                                         exchange(LOCAL,
                                                 exchange(REMOTE, REPARTITION,
-                                                        project(
-                                                                filter("R_INT_COL IN (2, 4) AND R_INT_COL % 2 = 0",
-                                                                        tableScan("table_unpartitioned", Map.of("R_STR_COL", "str_col", "R_INT_COL", "int_col"))))))))));
+                                                        filter(
+                                                                new Between(new Reference(INTEGER, "R_INT_COL"), new Constant(INTEGER, 2L), new Constant(INTEGER, 4L)),
+                                                                tableScan("table_unpartitioned", Map.of("R_STR_COL", "str_col", "R_INT_COL", "int_col")))))))));
+    }
+
+    @Test
+    public void testFilterDerivedFromTableProperties()
+    {
+        // Test that the filter is on build side table is derived from table properties
+        assertDistributedPlan(
+                "SELECT l.str_col, r.str_col FROM table_int_partitioned l JOIN table_unpartitioned r ON l.int_part = r.int_col",
+                noJoinReordering(),
+                output(
+                        join(INNER, builder -> builder
+                                .equiCriteria("L_INT_PART", "R_INT_COL")
+                                .left(
+                                        exchange(REMOTE, REPARTITION,
+                                                filter(
+                                                        TRUE,
+                                                        tableScan("table_int_partitioned", Map.of("L_INT_PART", "int_part", "L_STR_COL", "str_col")))))
+                                .right(
+                                        exchange(LOCAL,
+                                                exchange(REMOTE, REPARTITION,
+                                                        filter(
+                                                                new Between(new Reference(INTEGER, "R_INT_COL"), new Constant(INTEGER, 1L), new Constant(INTEGER, 5L)),
+                                                                tableScan("table_unpartitioned", Map.of("R_STR_COL", "str_col", "R_INT_COL", "int_col")))))))));
+    }
+
+    @Test
+    public void testQueryScanningForTooManyPartitions()
+    {
+        String query = "SELECT l.str_col, r.str_col FROM table_int_with_too_many_partitions l JOIN table_unpartitioned r ON l.int_part = r.int_col";
+        assertDistributedPlan(
+                query,
+                output(
+                        join(INNER, builder -> builder
+                                .equiCriteria("L_INT_PART", "R_INT_COL")
+                                .left(
+                                        filter(
+                                                TRUE,
+                                                tableScan("table_int_with_too_many_partitions", Map.of("L_INT_PART", "int_part", "L_STR_COL", "str_col"))))
+                                .right(
+                                        exchange(LOCAL,
+                                                exchange(REMOTE, REPLICATE,
+                                                        tableScan("table_unpartitioned", Map.of("R_STR_COL", "str_col", "R_INT_COL", "int_col"))))))));
     }
 
     // Disable join ordering so that expected plans are well defined.
     private Session noJoinReordering()
     {
-        return Session.builder(getQueryRunner().getDefaultSession())
+        return Session.builder(getPlanTester().getDefaultSession())
                 .setSystemProperty(JOIN_REORDERING_STRATEGY, JoinReorderingStrategy.NONE.name())
                 .setSystemProperty(JOIN_DISTRIBUTION_TYPE, JoinDistributionType.PARTITIONED.name())
                 .build();
